--- a/P009350.opf/layers/v001/Pagination.yml
+++ b/P009350.opf/layers/v001/Pagination.yml
@@ -1,5 +1,5 @@
 id: 6c3db6afdea842eab9821b4594739c00
-annotation_type: pagination
+annotation_type: Pagination
 revision: '00001'
 annotations:
   35ef7337d5324ea0876366480c37d192:
